# stardew-beehouse-layout

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
maps/: ginger_island_west_bottom.yml  ginger_island_west_left_bottom.yml  quality_sprinkler.yml  single_flower.yml  sprinkler.yml
src/beehouse_layout/: cli.py  constants.py
src/beehouse_layout/commands/: constants.py  convert.py  diff.py  optimize.py  validate.py
src/beehouse_layout/map/: parser.py
src/beehouse_layout/render/: constants.py  convert.py  dashboard.py  fonts.py  layout.py  overlay.py  route.py  text.py  utils.py
src/beehouse_layout/solver/: annealing.py  constants.py  constraints.py  greedy.py  scoring.py  tile_info.py  tour.py  types.py  validator.py
tests/: test_beehouse_access.py  test_convert_and_diff.py  test_solver_regressions.py
